--- a/ReClass.NET/ReClass.NET.csproj
+++ b/ReClass.NET/ReClass.NET.csproj
@@ -301,6 +301,7 @@
     <Compile Include="Native\NativeMethods.Windows.cs" />
     <Compile Include="Nodes\ArrayNode.cs" />
     <Compile Include="Nodes\BaseClassWrapperNode.cs" />
+    <Compile Include="Nodes\CustomNode.cs" />
     <Compile Include="Nodes\BaseFunctionNode.cs" />
     <Compile Include="Nodes\BaseWrapperArrayNode.cs" />
     <Compile Include="Nodes\BaseWrapperNode.cs" />
@@ -1051,6 +1052,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Images\B16x16_Button_Custom.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
